# autoware.universe

./: merge_main_branch.sh  versions.json
.github/: CODEOWNERS
.github/workflows/: build-and-test-differential.yaml  build-and-test.yaml
control/external_controller_executor/: CMakeLists.txt  package.xml
control/external_controller_executor/launch/: external_controller_executor.launch.xml
control/mpc_lateral_controller/: CMakeLists.txt  model_predictive_control_algorithm.md  package.xml
control/trajectory_follower_node/: CMakeLists.txt  package.xml
evaluator/perception_online_evaluator/: README.md
latest/: 404.html  index.html  sitemap.xml
latest/CODE_OF_CONDUCT/: index.html
latest/CONTRIBUTING/: index.html
latest/DISCLAIMER/: index.html
latest/common/: index.html
latest/planning/: index.html
main/: 404.html  index.html  sitemap.xml
main/CODE_OF_CONDUCT/: index.html
main/CONTRIBUTING/: index.html
main/DISCLAIMER/: index.html
main/common/: index.html
main/planning/: index.html
main/search/: search_index.json
perception/elevation_map_loader/: README.md
pr-5573/: 404.html  index.html  sitemap.xml
pr-5573/CODE_OF_CONDUCT/: index.html
pr-5573/CONTRIBUTING/: index.html
pr-5573/DISCLAIMER/: index.html
pr-5573/common/: index.html
pr-5573/planning/: index.html
pr-5573/search/: search_index.json
pr-6241/: 404.html  index.html  sitemap.xml
pr-6241/CODE_OF_CONDUCT/: index.html
pr-6241/CONTRIBUTING/: index.html
pr-6241/DISCLAIMER/: index.html
pr-6241/common/: index.html
pr-6241/planning/: index.html
pr-6241/search/: search_index.json
pr-6678/: 404.html  index.html  sitemap.xml
pr-6678/CODE_OF_CONDUCT/: index.html
pr-6707/: 404.html  index.html  sitemap.xml
pr-7750/: 404.html  index.html  sitemap.xml
pr-7795/: 404.html  index.html  sitemap.xml
pr-8064/: 404.html  index.html  sitemap.xml
pr-8196/: 404.html  index.html  sitemap.xml
pr-8198/: 404.html  index.html  sitemap.xml
pr-8199/: 404.html  index.html  sitemap.xml
pr-8205/: 404.html  index.html  sitemap.xml
pr-8296/: 404.html  index.html  sitemap.xml
pr-8298/: 404.html  index.html  sitemap.xml
pr-8303/: 404.html  index.html  sitemap.xml
pr-8304/: 404.html  index.html  sitemap.xml
pr-8305/: 404.html  index.html  sitemap.xml
pr-8306/: 404.html  index.html  sitemap.xml
pr-8308/: 404.html  index.html  sitemap.xml
pr-8323/: 404.html  index.html  sitemap.xml
(+7050 files in other folders)
