<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>external_controller_executor</name>
  <version>1.0.0</version>
  <description>TBD</description>

  <maintainer email="kyoichi.sugahara@tier4.jp">Kyoichi Sugahara</maintainer>

  <license>Apache License 2.0</license>

  <author email="kyoichi.sugahara@tier4.jp">Kyoichi Sugahara</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_system_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>motion_utils</depend>
  <depend>mpc_lateral_controller</depend>
  <depend>pid_longitudinal_controller</depend>
  <depend>pure_pursuit</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>trajectory_follower_base</depend>
  <depend>vehicle_info_util</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>
  <test_depend>autoware_testing</test_depend>
  <test_depend>fake_test_node</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
